# gfx-checks

./: .clang-format  .clang-tidy  .cmake-format  .gitignore  CMakeLists.txt  README.md
cmake/: CMakeLists.txt  GFXTidyConfig.cmake  clang_toolchain.cmake  gcc_toolchain.cmake  gfx_base_install.cmake  iwyu.cmake
src/front_end_action/: main.cpp
src/gfx/: BasenameDeclarationCheck.cpp  CMakeLists.txt  ClassCohesionCheck.cpp  ClassCohesionCheck.h  FundamentalTypeCheck.cpp  GFXTidyModule.cpp  ImplementationInNamespaceCheck.cpp  ImplementationInNamespaceCheck.h  MainDefinedInFileWithMainAffixCheck.cpp  MainDefinedInFileWithMainAffixCheck.h  MainImplementationFilenameCheck.cpp  MainImplementationFilenameCheck.h  PackageNamespaceCheck.cpp  PackageNamespaceCheck.h  basename_declaration_check.cpp  braced_initialization_check.cpp  class_cohesion_check.cpp  fundamental_type_check.cpp  gfx_tidy_module.cpp  implementation_in_namespace_check.cpp  main_implementation_filename_check.cpp  package_namespace_check.cpp  package_prefix_check.cpp
src/gfx/include/gfx/: BasenameDeclarationCheck.h  ClassCohesionCheck.h  FundamentalTypeCheck.h  MainImplementationFilenameCheck.h  PackageNamespaceCheck.h  basename_declaration_check.hpp  braced_initialization_check.hpp  class_cohesion_check.hpp  fundamental_type_check.hpp  implementation_in_namespace_check.hpp  main_implementation_filename_check.hpp  package_namespace_check.hpp  package_prefix_check.hpp
src/test/checkers/gfx/: implementation-in-namespace.cpp
src/test/code/: Makefile  dummy1.cpp  dummy2.cpp  dummy3.cpp
src/test/unittests/: GFXModuleTest.cpp  basename_declaration_check_test.cpp  braced_initialization_check_test.cpp  class_cohesion_check_test.cpp  fundamental_type_check_test.cpp  gfx_basename_declaration_test.cpp  gfx_fundamental_type_test.cpp  gfx_package_namespace_test.cpp  main_implementation_filename_check_test.cpp  package_namespace_check_test.cpp  package_prefix_check_test.cpp  unit_tests.cmake  utils.cpp  utils.hpp
src/test/unittests/dummy_source/: braced_init.cpp  dummy.cpp  foo.cpp  foo.hpp  package_prefix.cpp
